--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -194,14 +194,14 @@
 										<a href="https://mitedrive.com/view/h8uo2lj9vew7ue6wzr9at" class="button">MiteDrive</a>
 										<a href="https://pixeldrain.com/u/a5JfQV8o" class="button"> Pixeldrain </a>
 										</p></li>
-										<!--<li><a class="button">Episode - 3</a></li>
+										<li><a class="button">Episode - 19</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
-										<a href="" class="button"> Filefenix </a>
-										<a href="" class="button"> Google Drive </a>
-										<a href="" class="button"> MEGA </a>
-										<a href="" class="button"> Solidfiles </a>
-										</p></li>-->
+										<a href="https://drive.google.com/file/d/12CnY9VEbc85nj7i9c-5wFbkTo9fld2Ve/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/8jPoZiBHBh" class="button"> Terabox </a>
+										<a href="https://mitedrive.com/view/a6k17w8smeizzipobrx4wd" class="button">MiteDrive</a>
+										<a href="https://pixeldrain.com/u/GahErk5H" class="button"> Pixeldrain </a>
+										</p></li>
 										</center>
 									</ul>
 								</div>
